<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@id/detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/mafia3" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/games_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/detail_description"
            app:layout_constraintEnd_toEndOf="@id/detail_image"
            app:layout_constraintStart_toStartOf="@id/detail_image"
            app:layout_constraintTop_toBottomOf="@+id/detail_image" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintStart_toEndOf="@id/detail_creator"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            android:text="@string/games_desc" />

        <TextView
            android:id="@+id/detail_creator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/detail_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            android:text="@string/games_creator" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="125dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/detail_rating"
            app:layout_constraintEnd_toEndOf="@id/detail_creator"
            app:layout_constraintStart_toStartOf="@id/detail_creator"
            app:layout_constraintTop_toBottomOf="@+id/detail_creator"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/iconmoonton" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/games_rating"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/detail_profile_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/detail_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/detail_profile_image" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="@+id/detail_description"
            app:layout_constraintStart_toStartOf="@+id/detail_description"
            app:layout_constraintTop_toBottomOf="@id/detail_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>